[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/editor/AnimaAnimationData.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/anima/ui/editor/AnimaAnimationControl.gd" type="Script" id=5]

[sub_resource type="ButtonGroup" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="AnimationControl" type="MarginContainer"]
anchor_right = 1.0
rect_scale = Vector2( 0.99103, 0.951587 )
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 5 )

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 313.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_right = 1008.0
margin_bottom = 49.0
custom_constants/separation = 12

[node name="Label2" type="Label" parent="Container/HBoxContainer"]
margin_top = 12.0
margin_right = 66.0
margin_bottom = 37.0
text = "Delay:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delay" parent="Container/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 78.0
margin_right = 1008.0
margin_bottom = 49.0
label = "none"
can_clear_custom_value = false
show_relative_selector = false

[node name="AnimationData" parent="Container" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 57.0
margin_bottom = 305.0
rect_min_size = Vector2( 0, 248 )
rect_pivot_offset = Vector2( 504, 16 )

[node name="Content" parent="Container/AnimationData" index="1"]
visible = false

[node name="AsNode" parent="Container/AnimationData/Content/MarginContainer/AnimaData/NodeOrGroup/VBoxContainer2/MarginContainer/GridContainer" index="0"]
Button/Group = SubResource( 1 )

[node name="AsGroup" parent="Container/AnimationData/Content/MarginContainer/AnimaData/NodeOrGroup/VBoxContainer2/MarginContainer/GridContainer" index="1"]
Button/Group = SubResource( 1 )

[node name="AsGrid" parent="Container/AnimationData/Content/MarginContainer/AnimaData/NodeOrGroup/VBoxContainer2/MarginContainer/GridContainer" index="2"]
Button/Group = SubResource( 1 )

[node name="AnimateProperty" parent="Container/AnimationData/Content/MarginContainer/AnimaData/AnimaAccordion/MarginContainer/AnimateWith/Controls" index="0"]
Button/Group = SubResource( 2 )

[node name="UseAnimation" parent="Container/AnimationData/Content/MarginContainer/AnimaData/AnimaAccordion/MarginContainer/AnimateWith/Controls" index="1"]
Button/Group = SubResource( 2 )

[node name="PivotButton" parent="Container/AnimationData/Content/MarginContainer/AnimaData/AnimaAccordion/MarginContainer/AnimateWith/Wrapper/Container/PropertyValues/AnimateGrid" index="9"]
rect_min_size = Vector2( 0, 40 )

[connection signal="select_animation" from="Container/AnimationData" to="." method="_on_AnimationData_select_animation"]
[connection signal="select_easing" from="Container/AnimationData" to="." method="_on_AnimationData_select_easing"]
[connection signal="select_relative_property" from="Container/AnimationData" to="." method="_on_AnimationData_select_relative_property"]
[connection signal="updated" from="Container/AnimationData" to="." method="_on_AnimationData_updated"]
[connection signal="value_updated" from="Container/AnimationData" to="." method="_on_AnimationData_value_updated"]

[editable path="Container/AnimationData"]
[editable path="Container/AnimationData/Content/MarginContainer/AnimaData/AnimaAccordion/MarginContainer/AnimateWith"]
